Fixed nav bar alignment issue and added rule to ignore environment files

--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -42,6 +42,11 @@
   text-decoration: none;
 }
 
+.mat-toolbar-row .menu-actions {
+  display: inline-flex;
+  justify-content: baseline;
+}
+
 .mat-toolbar-row .menu-actions a {
   background-color: #28a745; 
   text-decoration: none;
@@ -49,7 +54,6 @@
 
 .app-icon>img:hover {
   background-color: #3f51b5;
-  /* background-color: rgb(44, 61, 160); */
   opacity: 0.7;
 }
 
